Add Location Map View Activity
- Add location map view activity to show the map of selected location and its children in selected semantic
- Separate BOSS http post task and map download task
- Fix a bug that changes semantic array of node in location tree before fetching semantic
- Cosmetic changes